--- a/index.html
+++ b/index.html
@@ -379,9 +379,9 @@
                         <h4>The Last Word</h4>
                         <p>HiN VPN is more than just a VPN service; it's a movement towards a more secure and open internet. By leveraging the power of community and open-source technology, HiN VPN is paving the way for a future where online privacy is a fundamental right for all.</p>
                         <div>
-                            <a href="https://github.com/itsyebekhe/HiN-VPN" target="_blank"><i class="bi bi-github"></i></a>
-                            <a href="https://x.com/yebekhe" target="_blank"><i class="bi bi-twitter"></i></a>
-                            <a href="https://t.me/Here_is_Nowhere" target="_blank"><i class="bi bi-telegram"></i></a>
+                            <a href="https://github.com/canfigvpn/vpn" target="_blank"><i class="bi bi-github"></i></a>
+                            <a href="https://x.com/canfigvpn" target="_blank"><i class="bi bi-twitter"></i></a>
+                            <a href="https://t.me/canfigvpn" target="_blank"><i class="bi bi-telegram"></i></a>
                         </div>
                         <p>&copy; 2024 HiN VPN. All rights reserved.</p>
                     </div>
